// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared/UI/Button Contained 1`] = `
<button
  className="css-1uj1qrl-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Disabled 1`] = `
<button
  className="css-pqm9ly-Button e1p27jrl0"
  color="primary"
  disabled={true}
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Full Width 1`] = `
<button
  className="css-1ro14lv-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Large 1`] = `
<button
  className="css-7d97dr-Button e1p27jrl0"
  color="primary"
  size="large"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Link 1`] = `
<a
  className="css-11rdjs7-Button e1p27jrl0"
  color="primary"
>
  My Button
</a>
`;

exports[`Storyshots Shared/UI/Button Medium 1`] = `
<button
  className="css-1uj1qrl-Button e1p27jrl0"
  color="primary"
  size="medium"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button No Shadow 1`] = `
<button
  className="css-gv8sxl-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Outlined 1`] = `
<button
  className="css-zcm2kp-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Primary 1`] = `
<button
  className="css-1uj1qrl-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Rounded 1`] = `
<button
  className="css-i5pert-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Secondary 1`] = `
<button
  className="css-1rslvzj-Button e1p27jrl0"
  color="secondary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Small 1`] = `
<button
  className="css-1f8p94p-Button e1p27jrl0"
  color="primary"
  size="small"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Text 1`] = `
<button
  className="css-w4gsv-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/IconButton Contained 1`] = `
<button
  className="css-1uj1qrl-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Disabled 1`] = `
<button
  className="css-pqm9ly-Button e1p27jrl0"
  disabled={true}
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Full Width 1`] = `
<button
  className="css-1ro14lv-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Large 1`] = `
<button
  className="css-7d97dr-Button e1p27jrl0"
  size="large"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Link 1`] = `
<a
  className="css-11rdjs7-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</a>
`;

exports[`Storyshots Shared/UI/IconButton Medium 1`] = `
<button
  className="css-1uj1qrl-Button e1p27jrl0"
  size="medium"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton No Shadow 1`] = `
<button
  className="css-gv8sxl-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Outlined 1`] = `
<button
  className="css-zcm2kp-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Primary 1`] = `
<button
  className="css-1uj1qrl-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Rounded 1`] = `
<button
  className="css-i5pert-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Secondary 1`] = `
<button
  className="css-1rslvzj-Button e1p27jrl0"
  color="secondary"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Small 1`] = `
<button
  className="css-1uj1qrl-Button e1p27jrl0"
  size="medium"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Text 1`] = `
<button
  className="css-w4gsv-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/Logo Custom 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "342px",
        "width": "342px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Large 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Medium 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "192px",
        "width": "192px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Primary 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "192px",
        "width": "192px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Small 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "86px",
        "width": "86px",
      }
    }
  />
</div>
`;
